# hlsl2glslfork

./: CMakeLists.txt
hlslang/MachineIndependent/: gen_hlslang.cpp  hlslang.l  hlslang_tab.cpp  hlslang_tab.h
tests/hlsl2glsltest/: hlsl2glsltest.cpp
